# django-htmx-youtube

./: .gitignore
django-htmx/: README.md  pyproject.toml  requirements.txt
django-htmx/films/: forms.py  models.py  urls.py  utils.py  views.py
django-htmx/films/migrations/: 0002_film.py  0003_alter_film_options_userfilms_alter_film_users.py
django-htmx/films/templates/: base.html  films.html
django-htmx/films/templates/partials/: film-list.html  navbar.html  search-results.html  search.html
django-htmx/films/templates/registration/: register.html
django-htmx/static/css/: styles.css
