[project]
name = "django-htmx"
version = "0.1.0"
description = "Using Django and HTMX - youtube course from 'BugBytes'"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1",
    "django-extensions>=4.1",
    "django-widget-tweaks>=1.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.11",
]
